# gtk2-nimbus-theme

./: AUTHORS  Makefile.in  README.md  README.tarball  aclocal.m4  config.h.in  configure  dark-index.theme.in  index.theme.in  light-index.theme.in
gtk-engine/: Makefile.in
gtk-engine/gtk-2.0/: Makefile.in  dark-gtkrc  gtkrc  light-gtkrc
gtk-engine/images/: Makefile.in
icons/: Makefile.in
icons/12x12/: Makefile.in
icons/12x12/actions/: Makefile.in
icons/12x12/emblems/: Makefile.in
icons/12x12/places/: Makefile.am  Makefile.in
icons/16x16/: Makefile.in
icons/16x16/actions/: Makefile.am  Makefile.in
icons/16x16/apps/: Makefile.in
icons/16x16/categories/: Makefile.in
icons/16x16/devices/: Makefile.in
icons/16x16/emblems/: Makefile.in
icons/16x16/mimetypes/: Makefile.in
icons/16x16/places/: Makefile.am  Makefile.in
icons/16x16/status/: Makefile.in
icons/192x192/: Makefile.in
icons/192x192/apps/: Makefile.in
icons/192x192/categories/: Makefile.in
icons/192x192/devices/: Makefile.in
icons/192x192/mimetypes/: Makefile.in
icons/192x192/places/: Makefile.am  Makefile.in
icons/20x20/: Makefile.in
icons/20x20/status/: Makefile.in
icons/24x24/: Makefile.in
icons/24x24/actions/: Makefile.am  Makefile.in
icons/24x24/animations/: Makefile.in
icons/24x24/apps/: Makefile.in
icons/24x24/categories/: Makefile.in
icons/24x24/devices/: Makefile.in
icons/24x24/emblems/: Makefile.in
icons/24x24/mimetypes/: Makefile.in
icons/32x32/: Makefile.in
icons/32x32/apps/: Makefile.in
icons/36x36/: Makefile.in
icons/36x36/places/: Makefile.am  Makefile.in
icons/48x48/: Makefile.in
icons/72x72/: Makefile.in
icons/96x96/: Makefile.in
metacity/: Makefile.in  light-metacity-theme-1.xml
(+38 files in other folders)
